--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "mock": "json-server --watch --port 3333 ./mock/database.json",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -48,6 +49,7 @@
     "@typescript-eslint/parser": "^5.27.0",
     "eslint": "^8.16.0",
     "eslint-plugin-react": "^7.30.0",
+    "json-server": "^0.17.0",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
   }
